...
                android:id="@+id/email_sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/green"
                android:text="@string/action_sign_up"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:id="@+id/switch_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/login_prompt"
                android:textSize="18sp"/>
...
