<resources>
    <string name="app_name">Playground Ideas</string>
    <string name="designs">Designs</string>
    <string name="manuals">Handbooks</string>
    <string name="plans">Plans</string>
    <string name="projects">Projects</string>

    <string name="fav_designs">Favourite Designs</string>
...
